--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,79 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<div class="row">
+  <div class="panel panel-success">
+    <div class="panel-heading">
+      <strong>Destaques</strong>
+    </div>
+    <div class="panel-body">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          </ol>
+
+          <div class="container">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-sm-6 text-center">
+                      <img src="http://iacom.s8.com.br/produtos/01/00/item/122533/9/122533905G1.jpg" alt="...">
+                    </div>
+                    <div class="col-sm-6">
+                      <h2 class="text-info">Tablet Samsung 10"</h2>
+                      <h5 class="text-danger">De R$ 599,00 por apenas</h5>
+                      <h1 class="text-danger">R$ 499,00</h1>
+                      <a href="#" class="btn btn-xs btn-info">Saiba mais...</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-sm-6 text-center">
+                      <img src="http://iacom.s8.com.br/produtos/01/00/item/119804/1/119804153G1.png" alt="...">
+                    </div>
+                    <div class="col-sm-6">
+                      <h2 class="text-info">Console Xbox One + Kinect</h2>
+                      <h5 class="text-danger">De R$ 1800,00 por apenas</h5>
+                      <h1 class="text-danger">R$ 1699,00</h1>
+                      <a href="#" class="btn btn-xs btn-info">Saiba mais...</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+    </div>
+  </div>
 </div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="row">
+  <div class="panel panel-success">
+    <div class="panel-body">
+      <div class="col-sm-3">
+        <div class="panel panel-info">
+          <div class="panel-body">
+            <div class="thumbnail">
+              <img src="http://static5.kabum.com.br/produtos/fotos/8565/8565_index_g.jpg" alt="" />
+            </div>
+            <h4 class="text-center text-info">Memória Kingstone DDR3 4GB</h4>
+            <h2 class="text-center text-danger"><strong>R$ 200,00</strong></h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
