--- a/app/views/cadproduto.html
+++ b/app/views/cadproduto.html
@@ -1,80 +1,187 @@
 <div class="row">
   <div class="col-sm-12">
-    <h1>Cadastro de produtos</h1>
+    <div class="row">
+      <h1>Cadastro de produtos</h1>
+    </div>
   </div>
 </div>
 <div class="row">
   <div class="col-sm-6">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <form name="frmCadProduto" ng-submit="salvar()">
-          <div class="input-group">
-            <span class="input-group-addon fixed-addon">Nome:</span>
-            <input type="text" class="form-control" placeholder="Nome" ng-model="produto.nome" required="required">
-          </div>
-          <br />
-          <div class="input-group">
-            <span class="input-group-addon fixed-addon">Código:</span>
-            <input type="text" class="form-control" placeholder="Código" ng-model="produto.codigo" required="required">
-          </div>
-          <br />
-          <div class="input-group">
-            <span class="input-group-addon fixed-addon">Categoria:</span>
-            <select class="form-control" required="required" ng-model="produto.categoria" ng-options="c.descricao for c in listaCategorias" ng-change="selecionaCategoria()">
-
-            </select>
-          </div>
-          <br />
-          <div class="input-group">
-            <span class="input-group-addon fixed-addon">Subcategoria:</span>
-            <select class="form-control" required="required" ng-model="produto.categoria.subcategoria" ng-options="s.descricao for s in listaSubcategorias" ng-disabled="listaSubcategorias.length === 0">
-
-            </select>
-          </div>
-          <br />
-          <div class="input-group">
-            <span class="input-group-addon fixed-addon">Valor:</span>
-            <input type="text" class="form-control" placeholder="Valor" ui-money-mask="2" ng-model="produto.valor" required="required">
-          </div>
-          <br />
-          <div class="input-group">
-            <span class="input-group-addon fixed-addon">Desconto:</span>
-            <input type="text" class="form-control" placeholder="Desconto" ui-money-mask="2" ng-model="produto.desconto" required="required">
-          </div>
-          <br />
-          <div class="input-group">
-            <span class="input-group-addon fixed-addon">Imagens:</span>
-            <input type="file" class="form-control" ng-model="fotos" multiple base-sixty-four-input required="required">
-            <button type="button" class="btn btn-primary btn-block" ng-click="carregar()">
-              CARREGAR IMAGENS
-            </button>
-          </div>
-          <br />
-          <div class="input-group">
-            <span class="input-group-addon fixed-addon">Descrição</span>
-            <textarea class="form-control" placeholder="Descrição" rows="10" ng-model="produto.descricao" required="required"></textarea>
-          </div>
-          <br />
-          <button type="submit" class="btn btn-primary btn-block" ng-disabled="frmCadProduto.$invalid">
-            Cadastrar
-          </button>
-        </form>
-      </div>
+    <div class="row">
+      <form name="frmPesquisa" ng-submit="pesquisar()">
+        <div class="input-group">
+          <span class="input-group-addon">Pesquisar</span>
+          <input type="text" class="form-control" placeholder="Pesquisar..." ng-model="produtoPesquisa.descricao" required="required">
+          <span class="input-group-btn">
+              <button class="btn btn-primary" type="submit" ng-disabled="frmPesquisa.$invalid">
+                <span class="glyphicon glyphicon-search"></span>
+              </button>
+            </span>
+        </div>
+        <br />
+      </form>
     </div>
   </div>
-  <div class="col-sm-6">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <h4>Imagens:</h4>
-        <div ng-if="produto.imagens.length > 0" class="alert alert-info"><p>Selecione uma imagem para ser a capa</p></div>
-        <div class="list-group">
-          <div class="list-group-item {{f.capa === true ? 'active' : ''}}" ng-repeat="f in produto.imagens">
-            <button type="button" class="btn btn-danger btn-sm pull-right" ng-click="removeImagem(f)">
-              <span class="glyphicon glyphicon-remove"></span>
-            </button>
-            <a href="" class="thumbnail" ng-click="selecionaCapa(f)">
-              <img width="100" ng-src="{{f.imagem}}" alt="" />
-            </a>
+</div>
+<div class="row">
+  <div class="col-sm-12">
+    <div class="row">
+      <button type="button" class="btn btn-success btn-sm pull-right" ng-click="novo()">
+        NOVO
+      </button>
+      <br />
+    </div>
+    <div class="row">
+      <table class="table table-striped table-condensed table-hover">
+        <thead>
+          <tr>
+            <th>
+              Id
+            </th>
+            <th>
+              Nome
+            </th>
+            <th>
+              Destaque
+            </th>
+            <th>
+              Valor
+            </th>
+            <th>
+              Desconto
+            </th>
+            <th>
+              Editar
+            </th>
+            <th>
+              Excluir
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="p in listaProdutos">
+            <td>
+              {{p.id}}
+            </td>
+            <td>
+              {{p.nome}}
+            </td>
+            <td>
+              {{p.promocao}}
+            </td>
+            <td>
+              {{p.valor | currency}}
+            </td>
+            <td>
+              {{p.desconto | currency}}
+            </td>
+            <td class="text-center">
+              <button class="btn btn-primary btn-sm" ng-click="selecionaProduto(p)">
+                <span class="glyphicon glyphicon-pencil"></span>
+              </button>
+            </td>
+            <td class="text-center">
+              <button class="btn btn-danger btn-sm" ng-click="deleteProduto(p.id)">
+                <span class="glyphicon glyphicon-remove"></span>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="mdCadProduto" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Cadastro/Edição de produto</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <form name="frmCadProduto" ng-submit="salvar()">
+                  <div class="input-group">
+                    <span class="input-group-addon fixed-addon">Nome:</span>
+                    <input type="text" class="form-control" placeholder="Nome" ng-model="produto.nome" required="required">
+                  </div>
+                  <br />
+                  <div class="input-group">
+                    <span class="input-group-addon fixed-addon">Código:</span>
+                    <input type="text" class="form-control" placeholder="Código" ng-model="produto.codigo" required="required">
+                  </div>
+                  <br />
+                  <div class="input-group">
+                    <span class="input-group-addon fixed-addon">Categoria:</span>
+                    <select class="form-control" required="required" ng-model="produto.categoria.id" ng-options="c.id as c.descricao for c in listaCategorias" ng-change="selecionaCategoria()">
+
+                    </select>
+                  </div>
+                  <br />
+                  <div class="input-group">
+                    <span class="input-group-addon fixed-addon">Subcategoria:</span>
+                    <select class="form-control" required="required" ng-model="produto.categoria.subcategorias[0].id" ng-options="s.id as s.descricao for s in listaSubcategorias" ng-disabled="listaSubcategorias.length === 0">
+
+                    </select>
+                  </div>
+                  <br />
+                  <div class="input-group">
+                    <span class="input-group-addon fixed-addon">Valor:</span>
+                    <input type="text" class="form-control" placeholder="Valor" ui-money-mask="2" ng-model="produto.valor" required="required">
+                  </div>
+                  <br />
+                  <div class="input-group">
+                    <span class="input-group-addon fixed-addon">Desconto:</span>
+                    <input type="text" class="form-control" placeholder="Desconto" ui-money-mask="2" ng-model="produto.desconto">
+                  </div>
+                  <br />
+                  <div class="input-group">
+                    <span class="input-group-addon fixed-addon">Imagens:</span>
+                    <input type="file" class="form-control" ng-model="fotos" multiple base-sixty-four-input>
+                    <button type="button" class="btn btn-primary btn-block" ng-click="carregar()">
+                      CARREGAR IMAGENS
+                    </button>
+                  </div>
+                  <br />
+                  <div class="input-group">
+                    <span class="input-group-addon fixed-addon">Descrição</span>
+                    <textarea class="form-control" placeholder="Descrição" rows="10" ng-model="produto.descricao" required="required"></textarea>
+                  </div>
+                  <br />
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox" ng-model="produto.promocao"> Produto em destaque?
+                    </label>
+                  </div>
+                  <br>
+                  <button type="submit" class="btn btn-primary btn-block" ng-disabled="frmCadProduto.$invalid">
+                    Cadastrar
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <h4>Imagens:</h4>
+                <div ng-if="produto.imagens.length > 0" class="alert alert-info"><p>Selecione uma imagem para ser a capa</p></div>
+                <div class="list-group">
+                  <div class="list-group-item {{f.capa === true ? 'active' : ''}}" ng-repeat="f in produto.imagens">
+                    <button type="button" class="btn btn-danger btn-sm pull-right" ng-click="removeImagem(f)">
+                      <span class="glyphicon glyphicon-remove"></span>
+                    </button>
+                    <a href="" class="thumbnail" ng-click="selecionaCapa(f)">
+                      <img width="100" ng-src="{{f.imagem}}" alt="" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
