--- a/app/views/produto.html
+++ b/app/views/produto.html
@@ -9,7 +9,7 @@
       <div class="panel-body">
         <div class="row">
           <div class="thumbnail">
-            <img src="{{imagemSelecionada.imagem || 'images/noImage.jpg'}}" width="300" alt="" />
+            <img src="{{imagemSelecionada.imagem || 'http://www.jimovel-cia.com.br/img_anuncio/sem_foto.jpg'}}" width="300" alt="" />
           </div>
         </div>
         <div class="row" ng-if="produtoSelecionado.imagens.length === 0">
