--- a/app/views/produto.html
+++ b/app/views/produto.html
@@ -12,7 +12,7 @@
             <img src="{{imagemSelecionada.imagem || 'http://www.jimovel-cia.com.br/img_anuncio/sem_foto.jpg'}}" width="300" alt="" />
           </div>
         </div>
-        <div class="row" ng-if="produtoSelecionado.imagens.length === 0">
+        <div class="row" ng-if="produtoSelecionado.imagens.length > 0">
           <div class="panel panel-default">
             <div class="panel-body">
               <div class="col-sm-3" ng-repeat="i in produtoSelecionado.imagens">
